[package]
name = "central-account-service"
version = "0.1.0"
edition = "2021"
publish = false
authors = [
    "Race Williams <race@genseng.com>",
]

[dependencies]
anyhow = "1.0.95"
argon2 = "0.5.3"
async-trait = "0.1.85"
axum = "0.8.1"
clap = { version = "4.5.27", features = ["derive", "env"] }
dotenvy = "0.15.7"
env_logger = "0.11.6"
hmac = "0.12.1"
jwt = "0.16.0"
log = "0.4.25"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sha2 = "0.10.8"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-native-tls", "uuid", "time"]}
thiserror = "2.0.11"
time = "0.3.37"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "signal"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = [
    "catch-panic",
    "compression-full",
    "sensitive-headers",
    "timeout",
    "trace",
] }
tracing = "0.1.41"
uuid = { version = "1.12.1", features = ["serde"] }
